--- a/www/project_links.html
+++ b/www/project_links.html
@@ -183,7 +183,7 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
         <a href="http://scplugin.tigris.org/"
                 >http://scplugin.tigris.org/</a>
       </p></li>
-      
+
       <li><p><b>Subclipse</b> - A Subversion Eclipse Plugin<br/>
         <a href="http://subclipse.tigris.org/"
                 >http://subclipse.tigris.org/</a>
@@ -265,6 +265,14 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
                 >http://pysvn.tigris.org/</a>
       </p></li>
 
+      <li><p><b>SmartSVN</b> - A cross-platform GUI client for Subversion<br/>
+        (<i>Not open source.  Available in a free and a commercial
+        version.</i>)
+        <br/>
+        <a href="http://www.smartsvn.com/"
+                >http://www.smartsvn.com/</a>
+      </p></li>
+      
     </ul>
 
 </div>
