--- a/www/svn_1.3_releasenotes.html
+++ b/www/svn_1.3_releasenotes.html
@@ -107,6 +107,11 @@ disappears, that will mean 1.3.0 is released.</p>
         API changes at least may get in, but the bug fix itself would
         wait until a 1.3.x micro release.  Is that right?</i></p></li>
 
+   <li><p class="todo"><i>TODO: we have to figure out what to do about
+        r15287.  See <a 
+     href="http://subversion.tigris.org/servlets/ReadMsg?list=dev&msgNo=105608"
+     >Peter Lundblad's mail</a> about it.</i></p></li>
+
    <li><p>The usual slew of bugfixes and improved APIs.  See the
        <a href="http://svn.collab.net/repos/svn/trunk/CHANGES"
        >CHANGES</a> file for details.</p>
