--- a/www/svn_1.3_releasenotes.html
+++ b/www/svn_1.3_releasenotes.html
@@ -96,16 +96,14 @@ disappears, that will mean 1.3.0 is released.</p>
    <li><p class="todo"><i>TODO: need to find out the full story with the
        keywords-as-hash changes</i></p></li>
 
-   <li><p class="todo"><i>TODO: it looks like the <a
-        href="http://subversion.tigris.org/issues/show_bug.cgi?id=443"
-        >Issue #443</a> (post-commit hooks script error output lost)
-        API changes at least may get in, but the bug fix itself would
-        wait until a 1.3.x micro release.  Is that right?</i></p></li>
+   <li><p class="todo"><i>TODO: we need to temporarily revert r15287.  See <a 
+     href="http://subversion.tigris.org/servlets/ReadMsg?list=dev&msgNo=105738"
+     >this mail</a> about it.</i></p></li>
 
-   <li><p class="todo"><i>TODO: we have to figure out what to do about
-        r15287.  See <a 
-     href="http://subversion.tigris.org/servlets/ReadMsg?list=dev&msgNo=105608"
-     >Peter Lundblad's mail</a> about it.</i></p></li>
+   <li><p class="todo"><i>TODO: need to fix the svn_fs_type() API as
+       described in <a
+    href="http://subversion.tigris.org/servlets/ReadMsg?list=dev&msgNo=105627"
+    >this mail</a>.  Karl Fogel is working on that.</i></p></li>
 
    <li><p>The usual slew of bugfixes and improved APIs.  See the
        <a href="http://svn.collab.net/repos/svn/trunk/CHANGES"
