* www/svn_1.3_releasenotes.html:   Add TODO items for fixing the Python bindings crashes on Windows, and for   updating Subversion's server-side Python scripts to use the new automatic   memory management API.
git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@856379 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/svn_1.3_releasenotes.html
+++ b/www/svn_1.3_releasenotes.html
@@ -64,6 +64,15 @@ Subversion book, see
        "just work" now, no SWIG required.  SWIG is only needed by
        tarball packagers and those building Subversion from working
        copy source, in which case it must be SWIG 1.3.24 or 1.3.25.</p>
+       
+       <p class="todo"><i>TODO: Fix <a 
+         href="http://svn.haxx.se/dev/archive-2005-09/1047.shtml">test suite
+         crashes on Windows.</a>.</i></p>
+    
+       <p class="todo"><i>TODO: Upgrade server-side python scripts to use
+         new automatic memory management API. See <a
+         href="http://svn.haxx.se/dev/archive-2005-09/0821.shtml"
+         >patch</a>.</i></p>
    </li>
 
    <li><p>The Apache HTTPD-based server (mod_dav_svn) can now log
