* svn_1.3_releasenotes.html: Fix typo.
git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@856382 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/svn_1.3_releasenotes.html
+++ b/www/svn_1.3_releasenotes.html
@@ -67,7 +67,7 @@ Subversion book, see
        
        <p class="todo"><i>TODO: Fix <a 
          href="http://svn.haxx.se/dev/archive-2005-09/1047.shtml">test suite
-         crashes on Windows.</a>.</i></p>
+         crashes on Windows</a>.</i></p>
     
        <p class="todo"><i>TODO: Upgrade server-side python scripts to use
          new automatic memory management API. See <a
