--- a/www/svn_1.3_releasenotes.html
+++ b/www/svn_1.3_releasenotes.html
@@ -65,9 +65,9 @@ Subversion book, see
        tarball packagers and those building Subversion from working
        copy source, in which case it must be SWIG 1.3.24 or 1.3.25.</p>
        
-       <p class="todo"><i>TODO: Fix <a 
-         href="http://svn.haxx.se/dev/archive-2005-09/1047.shtml">test suite
-         crashes on Windows</a>.</i></p>
+       <p class="todo"><i>TODO: Test that the <a 
+         href="http://svn.haxx.se/dev/archive-2005-09/1047.shtml">bindings
+         test suite crashes on Windows</a> have been fixed.</i></p>
    </li>
 
    <li><p>The Apache HTTPD-based server (mod_dav_svn) can now log
