--- a/www/svn_1.3_releasenotes.html
+++ b/www/svn_1.3_releasenotes.html
@@ -41,6 +41,18 @@ disappears, that will mean 1.3.0 is released.</p>
 <div class="h2" id="news" title="news">
 <h2>What's New in Subversion 1.3</h2>
 
+<ul>
+  <li>Path-based authorization for svnserve</li>
+  <li>Improved logging and repository listing in mod_dav_svn</li>  
+  <li>Hugely improved python and ruby bindings</li>
+  <li>A handful of new commandline switches</li>
+  <li>Some client and server performance improvements</li>
+  <li>Many improved APIs</li>
+  <li>More than 30 new bugfixes</li>
+</ul>
+
+<p>Details are described below.</p>
+
 <p>Subversion 1.3 is a superset of all previous Subversion releases.
 Anything in 1.0.x, 1.1.x, or 1.2.x is also in 1.3, but 1.3 contains
 features and bugfixes not present in any earlier release.  The new
@@ -48,123 +60,25 @@ features will eventually be documented in a 1.3 version of the free
 Subversion book, see
 <a href="http://svnbook.red-bean.com">svnbook.red-bean.com</a>.</p>
 
-<ul>
-   <li><p>Path-based authorization for svnserve (works similarly to
-       mod_authz_svn).</p>
-
-       <p class="todo"><i>TODO: but it needs to be documented.</i></p>
-   </li>
-
-   <li><p>Vastly improved bindings to Python: the bound APIs no longer
-       require APR pool arguments.  There is also much greater test
-       coverage of the Python bindings.</p>
-
-       <p>Users building from a Subversion source tarball do not need
-       SWIG at compile-time or run-time.  The Python bindings should
-       "just work" now, no SWIG required.  SWIG is only needed by
-       tarball packagers and those building Subversion from working
-       copy source, in which case it must be SWIG 1.3.24 or 1.3.25.</p>
-   </li>
-
-   <li><p>The Apache HTTPD-based server (mod_dav_svn) can now log
-       high-level Subversion operations, e.g., "update", "lock",
-       "commit", etc.  This feature is turned on or off in the httpd
-       configuration file; the default is off.</p>
-
-       <p>Equivalent functionality is planned for svnserve, the
-       standalone server, but not until Subversion 1.4, because the
-       implementation strategy there will be a bit different.  See <a
-       href="http://subversion.tigris.org/issues/show_bug.cgi?id=2409"
-       >Issue #2409</a> for details.</p>
-   </li>
-
-   <li><p>The Apache HTTPD-based server (mod_dav_svn) can now display
-        (in a web browser) the collection of repositories exported
-        by the SVNParentPath directive:  simply set
-        'SVNListParentPath&nbsp;on'.</p>
-   </li>
-
-   <li><p>Commands that accept peg revisions now operate faster when
-       invoked on older pegs. See <a
-       href="http://subversion.tigris.org/issues/show_bug.cgi?id=1970"
-       >Issue #1970</a> for details.</p>
-   </li>
-
-   <li><p>The command line client now can provide XML output for
-       the blame, info and status commands.</p>
-   </li>
-
-   <li><p>Interruptable http:// and https:// connections.  If built
-       with Neon 0.25.0 or higher, Subversion can be interrupted
-       during network operations over http and https.</p>
-   </li>
-
-   <li><p>The "<b>_svn</b>" hack is now <a
-
-       href="http://svn.collab.net/repos/svn/trunk/notes/asp-dot-net-hack.txt">officially
-       supported</a>: since some versions of ASP.NET don't allow
-       directories beginning with dot (e.g., ".svn", the standard
-       Subversion working copy administrative directory), the
-       <b>svn</b> command line client and <b>svnversion</b> now treat
-       the environment variable SVN_ASP_DOT_NET_HACK specially on
-       Windows.  If this variable is set (to any value), they will
-       use "_svn" instead of ".svn".  We recommend that all
-       Subversion clients running on Windows take advantage of this
-       behaviour.  Note that once the environment variable is set,
-       working copies with standard ".svn" directories will stop
-       working, and will need to be re-checked-out to get "_svn"
-       instead.</p>
-
-       <p class="warningmark">Third party software that uses the
-       Subversion libraries needs to be updated to make the
-       equivalent API calls.  See the three new
-       APIs: <b>svn_wc_is_adm_dir</b>, <b>svn_wc_get_adm_dir</b>, and
-       <b>svn_wc_set_adm_dir</b>.  Setting the SVN_ASP_DOT_NET_HACK
-       environment variable only works for the above-mentioned client
-       programs, and only on Windows.  It doesn't work for libraries;
-       users of the libraries should call the new APIs, which are
-       platform-indepndent.  See <a
-href="http://subversion.tigris.org/servlets/ReadMsg?list=dev&amp;msgNo=105810"
-       >this mail</a> and its thread for more details.</p>
-   </li>
-
-   <li><p>The APIs used by 'status --show-updates' now make URI,
-       youngest revision, date last modified, youngest node kind, and
-       most recent author available as reported by the server, in
-       addition to the status reflected by the working copy.</p>
-
-       <p>'status --show-updates --verbose' itself may eventually also
-       have this behavior, but for now retains its previous behavior
-       of reflecting the status of the working copy, and only showing
-       an asterisk to indicate any difference between the working copy
-       and repository states.</p>
-   </li>
-
-   <li><p>'svnlook&nbsp;changed' now takes a <tt>--copy-info</tt>
-       option, causing it to show copyfrom information in the same
-       format as 'svn&nbsp;log&nbsp;-v', for files added with
-       history.</p></li>
-
-   <li><p>The usual slew of bugfixes and improved APIs.  See the
-       <a href="http://svn.collab.net/repos/svn/trunk/CHANGES"
-       >CHANGES</a> file for details.</p>
-   </li>
-</ul>
-
 </div>
 
 <div class="h2" id="downloading" title="downloading">
 <h2>Downloading</h2>
 
+<p>Subversion 1.3 is not yet available for download.  Watch this
+  space for upcoming release candidates.</p>
+
+<!--- UNCOMMENT ME WHEN READY:
+
 <p>Subversion 1.3 is available as source code in three formats:</p>
 
 <ul>
-<li><a href="http://subversion.tigris.org/downloads/subversion-1.3.0.tar.gz-NOT-YET"
-    >subversion-1.3.0.tar.gz</a></li>
-<li><a href="http://subversion.tigris.org/downloads/subversion-1.3.0.tar.bz2-NOT-YET"
-    >subversion-1.3.0.tar.bz2</a></li>
-<li><a href="http://subversion.tigris.org/downloads/subversion-1.3.0.zip-NOT-YET"
-    >subversion-1.3.0.zip</a>&nbsp;(Windows)</li>
+<li><a href="http://subversion.tigris.org/downloads/subversion-1.2.3.tar.gz"
+    >subversion-1.2.3.tar.gz</a></li>
+<li><a href="http://subversion.tigris.org/downloads/subversion-1.2.3.tar.bz2"
+    >subversion-1.2.3.tar.bz2</a></li>
+<li><a href="http://subversion.tigris.org/downloads/subversion-1.2.3.zip"
+    >subversion-1.2.3.zip</a>&nbsp;(Windows)</li>
 </ul>
 
 <p>For binary packages, please see <a
@@ -180,6 +94,9 @@ href="http://subversion.tigris.org/servlets/ProjectDocumentList?folderID=260&amp
 >this folder</a>.</p>
 
 </div>
+
+-->
+
 
 <div class="h2" id="compatibility" title="compatibility">
 <h2>Compatibility Concerns</h2>
@@ -227,6 +144,9 @@ made to the output:</p>
     locale.  (Not exactly a command line output change, but near
     enough).</p></li>
 
+<li><p>'svn ls --verbose' now shows remote locks as '<tt>O</tt>', just
+    like 'svn status -u' does.</p></li>
+
 </ul>
 
 </div>
@@ -254,7 +174,233 @@ above may be of concern to you.</p>
 
 </div>
 
+<div class="h2" id="new-features" title="new-features">
+<h2>New Features</h2>
+
+<div class="h3" id="svnserve-authz" title="svnserve-authz">
+<h3>Path-based authorization for svnserve (<em>requires new server</em>)</h3>
+
+<p><b>svnserve</b>, the stand-alone subversion server, is now able to
+restrict both read and write access using the same
+authorization-policy files used by <b>mod_authz_svn</b>.  (Previously,
+the most one could do with svnserve is restrict write-access via
+pre-commit hook scripts.)</p>
+
+<p>The authorization file format is the same
+one <a
+href="http://svnbook.red-bean.com/en/1.1/ch06s04.html#svn-ch-6-sect-4.4.2"
+>described here</a>, in Chapter 6 of the Subversion book.  You simply
+need to point to it from your repository's <em>svnserve.conf</em>
+file using the new <tt>authz-db</tt> directive:</p>
+
+<pre>
+[general]
+password-db = userfile
+realm = my realm
+
+anon-access = none
+auth-access = write
+
+authz-db = authzfile
+</pre>
+
+<p>Note that when the <tt>authz-db</tt> directive is in use, the
+  "blanket" access directives (<tt>anon-access</tt>
+  and <tt>auth-access</tt>) can still be in effect too.  In order to
+  access a path, <em>both</em> the "blanket" directives and per-path
+  authz file must allow access.</p>
+
+
 </div>
+
+
+<div class="h3" id="dav-logging" title="dav-logging">
+<h3>Operational logging for mod_dav_svn (<em>requires new server</em>)</h3>
+
+<p>The Apache HTTPD-based server (mod_dav_svn) is now able to log
+  high-level Subversion operations, e.g., "update", "lock", "commit",
+  etc.  This is an improvement over trying to read and understand the
+  mysterious chains of WebDAV methods currently listed in
+  httpd's <em>accesslog</em> file.</p>
+
+<p>To activate this new feature, you need to make use of httpd 2.0's
+built in logging directives such
+as <a href="http://httpd.apache.org/docs/2.0/logs.html">LogFormat and
+CustomLog</a> directives.  These directives allow you to flexibly
+define your own log formats.  All you need to know is that mod_dav_svn
+now sets an environment variable named SVN-ACTION whenever it feels
+that an http request has completed a particular subversion-related
+action.  So, for example, the following <em>httpd.conf</em> directive
+would log all subversion-related actions to a private logfile, along
+with timestamp and username:</p>
+
+<p>
+<pre>CustomLog logs/svn_logfile "%t %u %{SVN-ACTION}e" env=SVN-ACTION</pre>
+</p>
+
+<p>Equivalent functionality is planned for svnserve, the standalone
+  server, but not until Subversion 1.4, because the implementation
+  strategy there will be a bit different.
+  See <a
+  href="http://subversion.tigris.org/issues/show_bug.cgi?id=2409"
+  >Issue #2409</a> for details.</p>
+
+</div>
+
+
+<div class="h3" id="bindings-improvements" title="bindings-improvements">
+<h3>Major Language Binding Improvements</h3>
+
+<ul>
+  <li>We now use SWIG 1.3.25 to generate bindings.  This new version
+    of SWIG has <em>no</em> compile-time package requirements and
+    uses <em>no</em> run-time libraries.  Subversion developers run
+    SWIG exactly once; SWIG then generates C code which gets packaged
+    in the release tarball for users.</li>
+
+  <li>The python bindings are vastly improved: the bound APIs no
+    longer require APR pool arguments.  Error messages and
+    documentation are better, and a new testsuite provides wider
+    coverage.</li>
+
+  <li>The ruby bindings have gone from skeletal (in subversion 1.2) to
+    complete API coverage in 1.3.  They also have a new, extensive
+    testsuite.</li>
+</ul>
+
+
+</div>
+
+
+<div class="h3" id="new-switches" title="new-switches">
+<h3>New subcommand switches:</h3>
+   <dl>
+      <dt><tt>svn blame --xml [--incremental]</tt></dt>
+      <dt><tt>svn status --xml [--incremental]</tt></dt>
+      <dt><tt>svn info --xml [--incremental]</tt></dt>
+
+      <dd>Display output in XML.  If <tt>--incremental</tt> is also
+      used, then output XML suitable for concatenation.</dd>
+
+      <dt><tt>svn add --no-ignore</tt></dt>
+      <dt><tt>svn import --no-ignore</tt></dt>
+      <dd>Disregard all "ignored" file patterns.</dd>
+
+      <dt><tt>svnlook tree --full-paths</tt></dt>
+      <dd>Show full paths instead of indented ones.</dd>
+
+      <dt><tt>svnlook diff --diff-copy-from</tt></dt>
+      <dd>Print differences against copy source.</dd>
+
+      <dt><tt>svnlook changed --copy-info</tt></dt>
+      <dd>Show details for copies.</dd>
+   </dl>
+
+</div>
+
+
+<div class="h2" id="enhancements" title="enhancements">
+<h2>Enhancements and Bugfixes</h2>
+
+<div class="h3" id="listparentpath" title="listparentpath">
+<h3>Listing available repositories in mod_dav_svn (<em>server</em>)</h3>
+
+<p>The Apache HTTPD-based server can now display (in a web browser)
+the collection of repositories exported by the SVNParentPath
+directive: simply set '<tt>SVNListParentPath&nbsp;on</tt>'
+in <em>httpd.conf</em>.</p>
+
+</div>
+
+
+<div class="h3" id="neon25" title="neon25">
+<h3>Interruptible http(s):// connections (<em>client</em>)</h3>
+
+<p>If built with Neon 0.25.1 or higher, Subversion can be interrupted
+   during network operations over http:// and https://.  This is a
+   long-standing bug that has finally been fixed.</p>
+
+</div>
+
+
+<div class="h3" id="_svn-hack" title="_svn-hack">
+<h3>Official support for Windows '_svn' directories (<em>client</em>)</h3>
+
+<p>The "<b>_svn</b>" hack is
+now <a
+href="http://svn.collab.net/repos/svn/trunk/notes/asp-dot-net-hack.txt">officially
+supported</a>: since some versions of ASP.NET don't allow directories
+beginning with dot (e.g., ".svn", the standard Subversion working copy
+administrative directory), the <b>svn</b> command line client
+and <b>svnversion</b> now treat the environment variable
+SVN_ASP_DOT_NET_HACK specially on Windows.  If this variable is set
+(to any value), they will use "_svn" instead of ".svn".  We recommend
+that all Subversion clients running on Windows take advantage of this
+behaviour.  Note that once the environment variable is set, working
+copies with standard ".svn" directories will stop working, and will
+need to be re-checked-out to get "_svn" instead.</p>
+
+<p class="warningmark">Third party software that uses the Subversion
+libraries needs to be updated to make the equivalent API calls. See
+the three new
+APIs: <b>svn_wc_is_adm_dir</b>, <b>svn_wc_get_adm_dir</b>, and
+<b>svn_wc_set_adm_dir</b>.  Setting the SVN_ASP_DOT_NET_HACK
+environment variable only works for the above-mentioned client
+programs, and only on Windows.  It doesn't work for libraries; users
+of the libraries should call the new APIs, which are
+platform-indepndent. See <a
+href="http://subversion.tigris.org/servlets/ReadMsg?list=dev&amp;msgNo=105810"
+>this mail</a> and its thread for more details.</p>
+
+</div>
+
+
+<div class="h3" id="performance" title="performance">
+<h3>Performance improvements (<em>client and server</em>)</h3>
+
+<p><b>svn status</b> is a bit faster, as is any command that involves
+  tracing long lines of history, such as <b>svn log</b>.  See <a
+  href="http://subversion.tigris.org/issues/show_bug.cgi?id=1970"
+  >issue #1970</a> for details.</p>
+
+<p>It's particularly noticeable when <b>svn blame</b> on a file with a
+  large amount of history, or when invoking any command on an older
+  "peg" revision.</p>
+
+</div>
+
+
+<div class="h3" id="apis" title="apis">
+<h3>API improvements (<em>client and server</em>)</h3>
+
+<p>If you develop a 3rd-party client application that uses Subversion
+  APIs, you may want to take notice of some new APIs:</p>
+
+<ul>
+  <li>The APIs used by 'status --show-updates' now make URI, youngest
+      revision, date last modified, youngest node kind, and most
+      recent author available as reported by the server, in addition
+      to the status reflected by the working copy.</li>
+
+  <li>There's now a data-transfer progress callback for ra_dav.</li>
+
+  <li>The repository root URL is now being stored as a separate field
+    in .svn/entries.</li>
+
+  <li>Many APIs have been "revved" to newer versions.</li>
+</ul>
+
+</div>
+
+<div class="h3" id="bugfixes" title="bugfixes">
+<h3>Other bugfixes (<em>client and server</em>)</h3>
+
+<p>The usual slew of heretofore-unreleased bugfixes.  See the
+<a href="http://svn.collab.net/repos/svn/trunk/CHANGES">CHANGES</a>
+file for full details.</p>
+
+</div>
+
 
 <div class="h2" id="svn-1.1-deprecation" title="svn-1.1-deprecation">
 <h2>Subversion 1.1.x series no longer supported</h2>
@@ -263,8 +409,8 @@ above may be of concern to you.</p>
 mean that your 1.1 installation is doomed; if it works well and is all
 you need, that's fine.  "No longer supported" just means we've stopped
 accepting bug reports against 1.1.x versions, and will not make any
-more 1.1.x bugfix releases, except perhaps for a critical security or
-data-loss bug.</p>
+more 1.1.x bugfix releases, except perhaps for absolutely critical
+security or data-loss bugs.</p>
 
 </div>
 
