* www/project_links.html (hosting): Add GeekISP.
Suggested by: Dave Steinberg <dave@geekisp.com>


git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@857636 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/project_links.html
+++ b/www/project_links.html
@@ -519,6 +519,14 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
           things) Subversion repositories and WebSVN.</em></p>
     </li>
 
+    <li><p><strong>GeekISP</strong>:
+                   commercial Subversion hosting<br/>
+      <a href="http://www.geekisp.com/">http://www.geekisp.com/</a></p>
+
+      <p><em>"GeekISP includes CVS and SVN repositories with all
+              accounts."</em></p> 
+    </li>
+
   </ul>
 
 </div>
