* www/faq.html (ssh-svnserve-location): mention trunk/notes/ssh-tricks
git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@857669 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/faq.html
+++ b/www/faq.html
@@ -1707,6 +1707,10 @@ SVN_SSH="ssh -i $HOME/.ssh/id_dsa.subversion"
 export SVN_SSH
 </pre>
 
+      <p><a
+      href="http://svn.collab.net/repos/svn/trunk/notes/ssh-tricks">This
+      file</a> discusses this topic in more detail.</p>
+      
 </div>
 
 <![CDATA[=========================================================]]>
