* www/faq.html (http-301-error): Expand on what an overlap in the name   space, producing a 301 error from Apache, means, and give an example   of how one could occur.
Patch by: Martin A. Brooks <martin@hinterlands.org>


git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@857932 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/faq.html
+++ b/www/faq.html
@@ -2860,6 +2860,16 @@ former case wins, and hence the "Moved Permanently" error.</p>
 <tt>&lt;Location&gt;</tt> does <b>not</b> overlap or live within any
 areas already exported as normal web shares.</p>
 
+<p>It'a also possible that you have an object in the web root 
+which has the same name as your repository URL. For example,
+imagine your web server's document root is  <tt>/var/www</tt>
+and your Subversion repository is located at
+<tt>/home/svn/repo</tt>. You then configure Apache to serve
+the repository at <tt>http://localhost/myrepo</tt>. If you then
+create the directory <tt>/var/www/myrepo/</tt> this will cause
+a 301 error to occur.</p>
+
+
 </div>
 
 <![CDATA[-----------------------------------------------------------]]>
