* www/faq.html (httpd-301-error): Fix a typo.
Patch by: Marcel Gosselin <marcel.gosselin@polymtl.ca>


git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@857943 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/faq.html
+++ b/www/faq.html
@@ -2860,7 +2860,7 @@ former case wins, and hence the "Moved Permanently" error.</p>
 <tt>&lt;Location&gt;</tt> does <b>not</b> overlap or live within any
 areas already exported as normal web shares.</p>
 
-<p>It'a also possible that you have an object in the web root 
+<p>It's also possible that you have an object in the web root 
 which has the same name as your repository URL. For example,
 imagine your web server's document root is  <tt>/var/www</tt>
 and your Subversion repository is located at
