* www/project_links.html: Add links to every repository browser that was listed     in ayita's 'view svn' factoid, and not already listed (Collaboa, perl_svn,     mod_svn_view).   Update ViewCVS entry to ViewVC.   Fix SVN::Web URL.   Reference the higher-level tools section in the repository browser section,     due to Trac and Collaboa.
git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@858275 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/project_links.html
+++ b/www/project_links.html
@@ -581,6 +581,12 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
                 >http://freshmeat.net/projects/scmbug/</a>
       </p></li>
 
+      <li><p><b>Collaboa</b> - Repository browser and issue tracker,
+        similar to Trac.<br/>
+        <a href="http://collaboa.org/"
+                >http://collaboa.org</a>
+      </p></li>
+
     </ul>
 
 </div>
@@ -589,18 +595,20 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
 <!-- old "repos_browsing" id left for compatibility -->
 <h2 id="repos_browsing">Repository browsing tools</h2>
     <ul>
-      <li><p><b>SVN::Mirror</b> and <b>SVN::Web</b><br/>
-        <a href="http://svn.clkao.org/svnweb/member/browse/clkao/modules/"
-                >http://svn.clkao.org/svnweb/member/browse/clkao/modules/</a>
+      <li><p><b>SVN::Web</b><br/>
+        <a href="http://search.cpan.org/~nikc/SVN-Web/lib/SVN/Web.pm"
+                >http://search.cpan.org/~nikc/SVN-Web/lib/SVN/Web.pm</a>
       </p></li>
 
-      <li><p><b>ViewCVS</b><br/>
-        <a href="http://viewcvs.sourceforge.net/"
-                >http://viewcvs.sourceforge.net/</a><br/>
-          (<i>Note: For Subversion support you need to use a recent 
-          snapshot from its 
-          <a href="http://sourceforge.net/cvs/?group_id=18760">CVS repository
-          </a></i>) <br/>
+      <li><p><b>ViewVC (formerly known as ViewCVS)</b><br/>
+        <a href="http://www.viewvc.org/"
+                >http://www.viewvc.org/</a><br/>
+          <i>Note: For Subversion support you need to use a recent 
+          snapshot from its Subversion repository:</i>
+          </p>
+          <pre>  svn&nbsp;checkout&nbsp;--username&nbsp;guest&nbsp;--password&nbsp;guest&nbsp;\
+    http://viewvc.tigris.org/svn/viewvc/trunk&nbsp;viewvc-trunk</pre>
+          <p>
           See <a href="http://www.baus.net/archives/000069.html"
                       >http://www.baus.net/archives/000069.html</a>
           for a guide to setting up ViewCVS with Subversion.
@@ -631,6 +639,21 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
       <li><p><b>FlexySvn</b><br/>
         <a href="http://www.akbkhome.com/blog.php/View/90/FlexySvn.html"
                 >http://www.akbkhome.com/blog.php/View/90/FlexySvn.html</a>
+      </p></li>
+
+      <li><p><b>perl_svn</b><br/>
+        <a href="http://www.osdevel.org/projects/show/16?lang=en"
+                >http://www.osdevel.org/projects/show/16?lang=en</a>
+      </p></li>
+
+      <li><p><b>mod_svn_view</b><br/>
+        <a href="http://www.outoforder.cc/projects/apache/mod_svn_view/"
+                >http://www.outoforder.cc/projects/apache/mod_svn_view/</a>
+      </p></li>
+  
+      <li><p>See also: <b>Trac</b> and <b>Collaboa</b> in the <a
+        href="#high-level-tools"><i>Higher-level tools</i> section above</a>,
+        which include repository browsing along with other functionality.
       </p></li>
 
     </ul>
