* www/project_links.html (hosting): Add TextDrive.com.
Patch by: Stefano Spinucci <virgo977virgo@yahoo.it>
(Blurb heavily edited by me.)


git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@858358 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/project_links.html
+++ b/www/project_links.html
@@ -527,6 +527,14 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
               accounts."</em></p> 
     </li>
 
+    <li><p><strong>TextDrive</strong>:
+                   commercial Subversion hosting<br/>
+      <a href="http://textdrive.com/">http://textdrive.com/</a></p>
+
+      <p><em>Repository hosting services, from shared hosting to fully
+             managed dedicated server clusters.</em></p> 
+    </li>
+
   </ul>
 
 </div>
