* www/bugs.html: Say when it's okay to post directly to dev@.  This   follows up to r18304.
git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@858379 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/bugs.html
+++ b/www/bugs.html
@@ -34,7 +34,13 @@ href="http://subversion.tigris.org/issues/buglist.cgi?component=subversion&amp;i
     <a href="mailto:users@subversion.tigris.org"
                    >users@subversion.tigris.org</a>.
     Once it's confirmed as a bug, someone, possibly you, can enter it
-    into the <a href="project_issues.html">issue tracker</a>.</p></li>
+    into the <a href="project_issues.html">issue tracker</a>.  (Or if
+    you're pretty sure about the bug, go ahead and post directly to 
+    our development list, <a href="mailto:dev@subversion.tigris.org"
+    >dev@subversion.tigris.org</a>.  But if you're not sure, it's
+    better to post to <a href="mailto:users@subversion.tigris.org"
+    >users@</a> first; someone there can tell you whether the behavior
+    you encountered is expected or not.)</p></li>
 
 <li><p>If the bug is in the APR library, please report it to both of
     these mailing lists:
